--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
     "vite-plugin-svgr": "^4.2.0"
   },
