--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
+    "@tensorflow-models/hand-pose-detection": "^2.0.1",
+    "@tensorflow/tfjs-backend-webgl": "^4.17.0",
+    "@tensorflow/tfjs-converter": "^4.17.0",
+    "@tensorflow/tfjs-core": "^4.17.0",
     "axios": "^1.6.7",
+    "fingerpose": "^0.1.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
+    "react-webcam": "^7.2.0",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/fingerpose": "^0.1.1",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/webpack-env": "^1.18.4",
